# foobar

bar/: CMakeLists.txt  package.xml
bar/src/: bar.cpp
foo/: CMakeLists.txt  package.xml
foo/include/foo/: foo.hpp
foo/src/: foo.cpp
